--- a/JN_JD_Website/staticfiles/styles.css
+++ b/JN_JD_Website/staticfiles/styles.css
@@ -45,10 +45,9 @@ body {
   min-height: 100vh; /* Ensure body takes at least the full viewport height */
 }
 
-.logo-img {
-    width:100px;
-}
-
+ .logo-img {
+    width:10rem;
+ }
 #navbar {
 	display: flex;
 	justify-content: space-between; /* Spread items */
@@ -60,13 +59,6 @@ body {
 }
 
 /* Ensure navigation links stay aligned */
-
-.nav-links {
-	display: flex;
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-}
 /* Basic Styling */
 .nav-links li {
     display: inline-block;
@@ -95,10 +87,9 @@ body {
     position: absolute;
     top: 100%;
     left: 0;
-    background-color: #008080;
+    background-color: #005c5c;
     list-style-type: none;
     padding: 0;
-    margin: 0;
     min-width: 200px; /* Adjust width if needed */
     border-radius: 0.5rem;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
@@ -115,7 +106,7 @@ body {
 }
 
 .dropdown-menu li a:hover {
-    background-color: #00bcd4;
+    color: #00bcd4;
 }
 
 /* Show dropdown on hover */
@@ -233,7 +224,6 @@ footer {
     flex-direction: column;
     align-items: center;
     padding: 2vh 2vw 2vh 2vw;
-
 	margin:5vh 0 0 0;
 	width:100%;
 }
@@ -282,24 +272,23 @@ footer {
     border-radius: 5px;
 }
 
-
-.signin-form input {
+.form input {
     display: block;
     width: 25vw;
     margin-bottom: 10px; /* Add spacing between inputs */
 }
 
-.signin-form {
+.form {
     display: flex;
     flex-direction: column;
     align-items: center; /* Optional: Set a max width */
 }
 
-.signin-form > * {
+.form > * {
 	margin: 2vh 0;
 }
 
-.signin-form button {
+.form button {
     width: 100%;
     padding: 10px;
     background-color: teal;
@@ -455,7 +444,7 @@ footer {
 }
 
 .event-date-block {
-    width:10rem;
+    width: 10rem;
     height: 10rem;
     background-color: #616161;
     color: white;
@@ -474,20 +463,37 @@ footer {
     font-family: "Roboto";
 }
 
-
-.event-details-block {
+.event-list-item{
     width: 50vw;
-    height:30vh;
+    height:20vh;
     border: 0.25rem solid #999999;
     border-radius: 25px;
     display: flex;
     align-items: center;
-    padding: 0 0 0 2rem;
-    margin-bottom: 2rem; /* Adds spacing between event details blocks */
+    padding: 1rem 1rem 1rem 1.5rem;
+    margin:0.5rem;
+}
+
+.event-list-date-block {
+    width: 6.5rem;
+    height: 6.5rem;
+    background-color: #616161;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size:2.5rem;
+    border-radius: 15px;
+    font-family: "Roboto-Thin";
 }
 
 .event-description-container {
-    margin: 0 0 0 5vw;
+    padding: 5vw;
+}
+
+.event-desc-desc {
+    overflow: hidden;
 }
 
 @media (max-width: 1200px) {
